--- a/packages/dashboard/index.html
+++ b/packages/dashboard/index.html
@@ -18,10 +18,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="icon" type="image/ico" href="favicon.ico">
 
-    <!-- Kumbh Sans Font -->
+    <!-- Lato and Kumbh Sans Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Kumbh+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
     <style>
       .initialLoading {
